# distrun

./: AGENTS.md  Cargo.toml  README.md
docs/: interpolation.md
scripts/: capture-readme-tui.sh  capture-tui-screenshot.cjs  capture-tui-screenshot.sh  run-docker-tests.sh
src/: backend.rs  cli.rs  config.rs  executor.rs  lib.rs  main.rs  model.rs  ops.rs  reconcile.rs  tmux.rs  tui.rs
tests/: cli.rs  ssh_tmux.rs
tests/fixtures/ssh-tmux/: Dockerfile
